healthcare-toolkit/v/2.0/hl7-module.adoc
= HL7 Module
:keywords: b2b, hl7, schema, module, edi

The HL7 Module provides you with the ability to convert HL7 ER7 messages to and from DataWeave-compatible representations using lists and maps.

The HL7 Module includes:

* HL7 ER7 message-reading, message-validation, and message-writing
* Integration with DataSense and DataWeave
* HL7 message packs for all versions from 2.2 through 2.8.1
* The ability to define your own schemas or customize the base HL7 schemas

To get started using the connector, follow these steps:

. Install the HL7 connector.
. Create schemas to describe your messages according to your implementation.
. Configure the HL7 Module for your trading partner according to your implementation convention.
. Use the HL7 module inside Mule flows.

This page helps provides guidance for each of these steps.

== Installation

The following sections explain how to install the HL7 connector.

=== Installing the HL7 Module in Anypoint Studio

Follow the steps below to install an HL7 Module connector in Anypoint Studio.

NOTE: To use the HL7 Module connector in a production environment, you must have purchased a license for Anypoint B2B.

. In the *Help* menu in *Anypoint Studio*, select *Install New Software*. The *Available Software* page appears.
+
image:hl7-module-2.png[hl7-module-2]
+
. In the *Work with* box, select the *Anypoint Connectors Update Site*.
. In the table below the *type filter text* box, click to expand the *Premium* folder, then select `HL7 Module`. 
. Click *Next*. The *Install Details* page appears.
. Review the details of the item you selected, then click *Next*.
. Click to accept terms and conditions of the product, then click *Finish*.
. Click *Restart Now* to complete the installation. After you install the connector and restart Studio you can see the new message processor available in the palette, under the Connectors category.

=== Using the HL7 Module via Maven

If you want to use the HL7 Module in conjunction with Maven, follow the instructions in the *As a Maven Dependency* section of the *Install* tab on the link:http://mulesoft.github.io/edi-module/hl7/guide/install.html[Mule EDI Anypoint HL7 Connector page].

== EDI Schema Language

The HL7 Module uses a YAML format called ESL (for EDI Schema Language) to represent EDI schemas.  Basic ESLs define the structure of ER7 messages in terms of _structures_ (message structures, in HL7 terminology), _groups_, _segments_, _composites_, and _elements_. ESLs for the HL7 versions 2.2, 2.3, 2.3.1, 2.4, 2.5, 2.5.1, 2.6, 2.7, 2.7.1, 2.8, and 2.8.1 are included. 

To configure the HL7 Module according to your implementation convention, define an _overlay schema_. An overlay schema is a special form of ESL that allows you to modify a base schema, such as an HL7 2.5.1 ADT_A01 schema, with your specific conventions. (You don't need an overlay schema if you're using the structure defined by the standard, but you can use an overlay to tailor the structure to your usage).

You can also define your own schemas from scratch.
See link:/anypoint-b2b/edi-schema-language-reference[EDI Schema Language Reference] for more details.

[NOTE]
====
YAML uses a combination of lists and sets of key-value pairs. Order of values is not important, as long as required items are present. Quotes (either single or double quotes) are used around values which may consist of digits but are meant to be interpreted as strings (since otherwise the YAML parser treats the values as numbers). Indentation is used to show the nesting of lists.

For readability, the ESL structures shown here define all simple key-value pairs before any lists that are part of the same definition.
====

=== Defining your Implementation Convention with an Overlay Schema

To specify a schema according to your implementation convention, you can follow the following process:

* Create an "overlay" schema which imports the base schema you want to customize - for example, HL7 2.5.1 ADT_A01
* Customize the overall structure - segment usage, positions, groups and counts
* Customize segments - including usage and counts

Overlay schemas are very similar in structure to a link:/anypoint-b2b/edi-schema-language-reference[complete schema definition], but instead of providing all the details of the schema structure they only list changes. Overlay schemas specify how to use implementation conventions with a particular trading partner to extend and customizes the standard.

By way of example, here's the start of a sample overlay schema modifying the basic HL7 2.5.1 ADT_A01 message structure definition. This sample customizes the `PD1` segment and specifies that it is mandatory, so an error will be reported if the segment is not present in a receive or send message.

[source,yaml, linenums]
----
form: HL7
version: '2.5.1'
imports: [ '/hl7/v2_5_1/ADT_A01.esl' ]
structures:
- idRef: 'ADT_A01'
  data:
  - { idRef: 'PD1', position: '05', usage: M }
----

=== Structure Overlay

A structure overlay details modifications to the base schema definition of an HL7 message structure. Most often these modifications take the form of marking segments or groups in the base definition as unused, but any usage or repetition count change is allowed. Here's the form taken by a structure overlay:

[source,yaml, linenums]
----
structures:
- idRef: 'ADT_A01'
  data:
  - { idRef: 'PD1', position: '05', usage: M }
  - { groupIdRef: 'PROCEDURE', position: '17', usage: U }
  - { groupIdRef: 'INSURANCE', position: '22', usage: M }
----

The modifications in this example specify that the PD1 segment and the INSURANCE group are required in each message, and that the PROCEDURE group is unused. With this overlay, errors will be reported if the PD1 segment or the INSURANCE group is not present in a message, or if the PROCEDURE group is present.

The key-value pairs at the structure level are:

[%header,cols="3s,7a"]
|===
|Key |Description
|idRef |The ID for the message structure being modified.
|name |The message structure name (optional).
|data |List of segment and group modifications withinthe structure (optional, each is only used when there are modifications to that section).
|===

Each item in the list of structure data components is either a segment reference or a group definition. Both are shown here using a compact YAML syntax where the values for each reference are given as comma-separated key-value pairs enclosed in curly braces. The values are:

[%header,cols="3s,7a"]
|===
|Key |Description
|idRef |The referenced segment ID (optional, verified if provided but otherwise ignored – the position value is used to uniquely identify segments within the section).
|position |The segment position within the message structure.
|usage |Usage code, which may be M for Mandatory, O for Optional, C for Conditional, or U for Unused (optional, base definition value used if not specified).
|count |Maximum repetition count value, which may be a number or the special value `>1` meaning any number of repeats (optional, base definition value used if not specified).
|===

The values in a group definition are:

[%header,cols="3s,7a"]
|===
|Key |Description
|groupIdRef |The referenced group id (optional, verified if provided but otherwise ignored – the position value is used to uniquely identify a group within a section).
|position |The segment position within the message structure (position of the first segment included in the group).
|usage |Usage code, which may be M for Mandatory, O for Optional, C for Conditional, or U for Unused.
|count |Maximum repetition count value, which may be a number or the special value `>1` meaning any number of repeats (optional, base definition value used if not specified).
|items |List of segments (and potentially nested loops) making up the loop (only available with expanded YAML format).
|===

=== Segment Overlays

A segment overlay again details modifications to the base schema definition. Most often these modifications take the form of marking elements or composites in the base definition as unused, but any usage or repetition count change is allowed. Here a full overlay including some sample segment overlays:

[source,yaml, linenums]
----
form: HL7
version: '2.5.1'
imports: [ '/hl7/v2_5_1/ADT_A01.esl' ]
structures:
- idRef: 'ADT_A01'
  data:
  - { idRef: 'ROL', position: '06' }
  - { idRef: 'DG1', position: '14' }
segments:
- idRef: 'ROL'
  values:
  - { position: 2, usage: O }
  - { position: 4, usage: O }
- { idRef: 'DG1', trim: 4 }
----

This example modifies the base definitions for the ROL and DG1 segments. It makes the values at position 2 and 4 of the ROL segment optional (they are required in the base definition), and makes all values after the first four in the DG1 segment unused (which drops them from the metadata representation and means they'll be ignored in data).

Segment modifications only effect structures included in the overlay with explicit references to the modified segments. That's why the ROL and DG1 segment references need to be included in the structure part of the schema, even though nothing (such as usage or repetition count) is being changed for these segments at the structure level.

The above example uses the compact form for segment modifications that only involve a truncate, while modifications that make changes to individual values are expressed in expanded form. As with all the other YAML examples, the two forms are actually equivalent and can be used interchangeably.

The key-value pairs in a segment overlay are:

[%header,cols="3s,7a"]
|===
|Key |Description
|idRef |Segment identifier.
|trim |Trim position in segment, meaning all values from this point on are marked as unused (optional).
|values |List of individual value modifications.
|===

The values list references values in the segment by position. The values for these references are:

[%header,cols="3s,7a"]
|===
|Key |Description
|position |The value position within the segment.
|name |The name of the value in the segment (optional, base definition value used if not specified)
|usage |Usage code, which may be M for Mandatory, O for Optional, C for Conditional, or U for Unused (optional, base definition value used if not specified).
|count |Maximum repetition count value, which may be any number or the special value `>1` meaning any number of repeats (optional, base definition value used if not specified).
|===

=== Determining the HL7 Schema Location

To use the connector, you need to know the locations of the schemas in your project. If you're using the out of the box HL7 schemas and not customizing anything, the schema location follows the  `/hl7/{version}/{message structure}.esl` pattern. For example, if you're using the `2.5.1` version and the ADT_A01 message structure, your schema location is `/hl7/v2_5_1/ADT_A01.esl`.

If you're creating a custom implementation convention (whether full schemas, or overlay schemas), you should put your schemas under a directory in src/main/app and refer to the location using `${app.home}`. For example, if you've put your ADT_A01 schema under src/main/app/mypartner/ADT_A01.esl, your schema location is `${app.home}/mypartner/ADT_A01.esl`.

== Configuring the HL7 Module

After you install the connector and configure your schema customizations (if any), you can start using the connector. Create separate configurations for each implementation convention.

[tabs]
------
[tab,title="Studio Visual Editor"]
....

Follow these steps to create a global HL7 module configuration in a Mule application:

. Click the *Global Elements* tab at the base of the canvas, then click *Create*.
. In the *Choose Global Type* wizard, use the filter to locate and select, *HL7 Module*, then click *OK*.
+
image:hl7-module-3.png[hl7-module-3]
+
. Configure the parameters according to the connector reference.
. Click *OK* to save the global connector configurations.
. Return to the *Message Flow* tab in Studio.

....
[tab,title="XML Editor or Standalone"]
....

Ensure that you have included the EDI namespaces in your configuration file.

[source, code, linenums]
----
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:hl7-edi="http://www.mulesoft.org/schema/mule/hl7-edi" xmlns:hl7-transformer="http://www.mulesoft.org/schema/mule/hl7-transformer" xmlns:hl7="http://www.mulesoft.org/schema/mule/hl7" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/hl7-edi http://www.mulesoft.org/schema/mule/hl7-edi/current/mule-hl7-edi.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">

----

Follow these steps to configure a HL7 module in your application.

. Create a global ServiceNow configuration outside and above your flows, using the following global configuration code.
+
[source, xml, linenums]
----
<hl7-edi:config name="MyTradingPartner" doc:name="HL7 EDI: Configuration">
  <hl7-edi:schemas>
    <hl7-edi:schema>/hl7/v2_5_1/ADT_A01.esl</hl7-edi:schema>
    <hl7-edi:schema>/hl7/v2_5_1/ADT_A02.esl</hl7-edi:schema>
  </hl7-edi:schemas>
</hl7-edi:config>
----
+
. Configure the connector according to your implementation convention using the guide below.
....
------

After you set up a global element for your HL7 module, configure the schemas, acknowledgments, IDs, and the parser options. A reference for these options is located in the link:http://mulesoft.github.com/edi-module[EDI module reference].

=== Setting Your Schema Locations

NOTE: Currently, you can only configure schema locations in the Anypoint Studio XML view.

Using the schema locations determined above, switch to the XML view by clicking *Configuration XML* in Studio and modify your HL7 module configuration to include a list of all the schemas you wish to include by adding an <http://edischema[edi:schema]> element for each document type:

[source, xml, linenums]
----
<hl7-edi:config name="MyTradingPartner" doc:name="HL7 EDI: Configuration">
  <hl7-edi:schemas>
    <hl7-edi:schema>/hl7/v2_5_1/ADT_A01.esl</hl7-edi:schema>
    <hl7-edi:schema>/hl7/v2_5_1/ADT_A02.esl</hl7-edi:schema>
  </hl7-edi:schemas>
</hl7-edi:config>
----

=== Setting your HL7 Identification

You can configure the MSH application and facility identification for you and your trading partner on the HL7 Module connector configuration.

The "Self identification" parameters identify your side of the trading partner relationship, while the "Partner identification" parameters identify your trading partner. The values you set are used when writing HL7 messages to supply the namespace ID, universal ID,and universal ID type, and are verified in receive messages. If you don't want to restrict incoming messages you can leave these blank, and set the values for outgoing messages on the write operation or the actual outgoing message. Values set on the write operation overrides the connector configuration, and values set directly on the message overrides both the connector configuration and any values set on the write operation.

== Understanding HL7 Message Structure

The connector enables reading or writing of HL7 documents into or from the canonical ER7 message structure. This structure is represented as a hierarchy of Java Maps and Lists, which can be manipulated using DataWeave or code. Each transaction has its own structure, defined in the schemas as outlined above.

The message itself contains the following keys (some of which only apply to either the read operation or the write operation, as indicated):

[%header,cols="3s,7a"]
|===
|Key name |Description
|ACK (read only) |ACK message generated in response to the input data. The MSA-1 acknowledgment code value is based on the parser configuration settings. To send an acknowledgment, see the Sending Acknowledgments section below.
|Data |Wrapper for message data, with a key matching the message structure Id value linking to the actual data. This allows different messages to be included in the metadata and handled in DataWeave mappings.
|Delimiters (read only) |The delimiters used for the message. The characters in the string are interpreted based on position, in the following order: (component separator), (repetition separator), (escape character), (subcomponent separator).
|Errors (read only) |A list of errors which are associated with the input message. (See the HL7Error structure description in the Reading and Validating HL7 Messages section below.)
|Id |Message structure id.
|MSH (read only) |Link to received MSH segment data.
|Name |Message structure name.
|===

Individual messages have their own maps, with keys matching the segments of the message. For instance, an ACK message would use the message structure ID "ACK", and the data for the ACK message sent or received would be present as an "ACK" value in the "Data" map. The ACK message is itself a map, and the segments and groups of the message are represented as maps (in the case of singlton instances) or lists of maps (for repeating instances) with positional keys.

image:show an image here of data sense for an expanded ACK message

== Reading and Validating HL7 ER7 Messages

To read an HL7 message, search the palette for "HL7 EDI" and drag the HL7 module into a flow. Then, go to the properties view, select the connector configuration you created above and select the "Read" operation. This operation reads any byte stream into the structure described by your HL7 schemas.

The HL7 module validates the message structure when it reads it in. Message validation includes checking the syntax and content of the MSH and all component segments of the message. Normally errors are both logged and accumulated and reported in the generated ACK message provided in the generated data structure, and all messages (whether error free or with non-fatal errors) are passed on for processing as part of the output message Map. Errors in reading the input data results in exceptions being thrown.

image:hl7-module-4.png[hl7-module-4]

Error data entered in the receive data map uses the HL7Error class, a read-only JavaBean with the following properties:

[%header,cols="3s,7a"]
|===
|Property |Description
|segment |The zero-based index within the input of the segment causing the error.
|fatal |Flag for a fatal error, meaning the associated message was rejected as a result of the error.
|errorType |Enumeration for the different types of errors defined by the HL7 standards (ERR-3 values).
|errorCode |Error code, as defined by the HL7 standard for the indicated type of error.
|errorText |Text description of the error.
|===

Error data is returned by the read operation as an optional list with the "Errors" key.

== Writing HL7 EDI Messages

To write an outgoing message, construct an outgoing HL7 EDI message according to the structure as defined above. For example, this sample creates an outgoing HL7 message which is written to a file.

[source, xml, linenums]
----
  ...
<hl7-edi:write config-ref="HealthCare" doc:name="Send ACK"/>
<file:outbound-endpoint responseTimeout="10000" doc:name="File" path="output" outputPattern="ack.edi"/>
----

== Sending Acknowledgments

Sending generated ACK messages is the same as writing any other HL7 message, except you set the ACK message generated during the read operation as the output message under the Data key. For example:

[source, xml, linenums]
----
<hl7-edi:read config-ref="Walmart" doc:name="Read EDI Doc"/>
  ...
<dw:transform-message doc:name="Create Outgoing Message">
  <dw:input-payload doc:sample="InMessage.dwl"/>
  <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
	Name: "ACK",
	MSH: payload.ACK."01_MSH",
	Id: "ACK",
	Data: {
		ACK: payload.ACK
	}
}]]></dw:set-payload>
</dw:transform-message>
<hl7-edi:write config-ref="HealthCare" doc:name="ACK"/>
<file:outbound-endpoint responseTimeout="10000" doc:name="File" path="output" outputPattern="ack.edi"/>
----

The generated ACK messages have MSH data set up for sending back to the sender of the original message, so you don't need to change anything in the data in order to do the send.
